# flat-sdk

./: .gitignore  CMakeLists.txt
demo/: CMakeLists.txt  demo.cpp
demo/include/demo/: assets.hpp
demo/scripts/: demo.lua
patches/sol2/: 0001-Fix-CMake-headers-install-target.patch
